--- a/todo/templates/todo.html
+++ b/todo/templates/todo.html
@@ -31,7 +31,7 @@
         <div class="todo-container">
             <form method="post" class="add-todo-form">
                 {% csrf_token %}
-                <input type="text" name="title" required placeholder="Add a new todo..." class="todo-input" maxlength="25">
+                <input type="text" name="title" required class="todo-input" placeholder="Add a new todo..." maxlength="200">
                 <button type="submit" class=submit-button value="Add Task">Add Todo</button>
             </form>
 
@@ -43,10 +43,15 @@
                                 <span class="todo-title">{{ todo.title }}</span>
                                 <span class="todo-date">{{ todo.date|date:"M d, Y H:i" }}</span>
                             </div>
-                            <a href="{% url 'delete_todo' todo.srno %}" class="delete-btn" 
-                               onclick="return confirm('Are you sure you want to delete this todo?')">
-                                <i class="fas fa-trash"></i>
-                            </a>
+                            <div class="todo-actions">
+                                <a href="{% url 'edit_todo' todo.srno %}" class="edit-btn">
+                                    <i class="fas fa-edit"></i>
+                                </a>
+                                <a href="{% url 'delete_todo' todo.srno %}" class="delete-btn" 
+                                   onclick="return confirm('Are you sure you want to delete this todo?')">
+                                    <i class="fas fa-trash"></i>
+                                </a>
+                            </div>
                         </div>
                     {% endfor %}
                 {% else %}
